--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^2.51.6",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
+    "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.12.0",
