--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
     "luxon": "^3.3.0",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.12.0",
