--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^2.51.6",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "luxon": "^3.3.0",
     "openai": "^3.2.1",
     "react": "^18.2.0",
